CHANGE: UI    | Default for "add other hashes" in make torrent wizard and sharing config changed to false [Parg]
CHANGE: UI    | retention of log history removed as taking up to 1MB mem [Parg]
CHANGE: Core  | Disk manager read/write threads now started on demand [Parg]
CHANGE: UI    | Added missing spaces back into SWT dock item's tooltip [Parg]

BUGFIX: Core  | Fix compatibility with JRE 1.4 series under Win32 due to NIO bug [Nolar]
BUGFIX: Core  | Ignore peers with these data ports config option didn't work the DHT and PEX obtained peers [Nolar]
BUGFIX: Core  | DHT IP derivation from contacts fixed [Parg]



2005.05.02 | Azureus 2.3.0.0

FEATURE: Core | Client support for the 'trackerid' announce extension [Nolar]
FEATURE: Core | Client support for the 'min interval' announce extension [Nolar]
FEATURE: Core | Added options to disable scrape entirely or just for non-running torrents [Parg]
FEATURE: Core | RSS Feed parse APIs added to plugin interface [Parg]
FEATURE: Core | Non-blocking sockets based TCP tracker implementation [Parg]
FEATURE: Core | Client identification plugin interface [Parg]
FEATURE: Core | Separate protocol payload and overhead stats [Nolar]
FEATURE: Core | Data deletion can now defer to Recycle Bin and Trash under Windows and Mac OS X, respectively [Parg, CrazyAlchemist]
FEATURE: Core | Distributed Database [Parg]
FEATURE: Core | Decentralised tracking [Parg]
FEATURE: Core | Magnet URI for location of decentralised torrents [Parg]
FEATURE: Core | Ability to update built-in plugins independently of the core [Parg]
FEATURE: Core | Diagnostic collection for system properties and config settings [Parg]
FEATURE: Core | added option to move newly completed seeds to the end of the seeding list, rather than the front [Parg]
FEATURE: Core | Support for I2P plugin [Parg]
FEATURE: Core | Network selection support (public, i2p, tor) [Parg]
FEATURE: Core | Inter-client peer exchange [Nolar]
FEATURE: UI   | Option to disable small fonts under OSX [Nolar]