@@ -969,6 +969,8 @@ SpeedView.stats.downloaded=Downloaded (Protocol)
 SpeedView.stats.uploaded=Uploaded (Protocol)
 SpeedView.stats.ratio=Ratio
 SpeedView.stats.uptime=Up Time
+SpeedView.stats.now=Now
+SpeedView.stats.now.tooltip=Total (Protocol)
 AutoMigration.useralert=Azureus user config files/dirs auto-migration results:\n\n%1\nAny failures must be migrated manually.\nDON'T FORGET TO UPDATE YOUR SAVE PATHS IN CONFIGURATION IF THEY'VE BEEN MIGRATED!
 #
 # > 2.0.8.0
